MDEV-19761 - Before Trigger not processed for Not Null Column